# SnekGame

./: LICENSE  meson.build
src/: Point.hpp  Rand.hpp  Serial.hpp
src/client/: main.cpp
src/server/: SnekGame.hpp  main.cpp
